# piscine_python

ex01/: ft_plot_area.py
python 00/ex0/: ft_hello_garden.py
python 00/ex02/: ft_harvest_total.py
python 00/ex1/: ft_garden_name.py
python 00/ex2/: ft_plot_area.py
python 00/ex3/: ft_harvest_total.py
python 00/ex4/: ft_plant_age.py
python 00/ex5/: ft_water_reminder.py
python 00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python 00/ex7/: ft_seed_inventory.py
python 01/ex0/: ft_garden_intro.py
python 01/ex1/: ft_garden_data.py
python 01/ex2/: ft_plant_growth.py
python 01/ex3/: ft_plant_factory.py
python 01/ex4/: ft_garden_security.py
python 01/ex5/: ft_plant_types.py
python 01/ex6/: ft_garden_analytics.py
python 02/ex0/: ft_first_exception.py
python 02/ex1/: ft_raise_exception.py
python 02/ex2/: ft_different_errors.py
python 02/ex3/: ft_custom_errors.py
python 02/ex4/: ft_finally_block.py
python 03/ex0/: ft_command_quest.py
python 03/ex1/: ft_score_analytics.py
python 03/ex2/: ft_coordinate_system.py
python 03/ex3/: ft_achievement_tracker.py
python 03/ex4/: ft_inventory_system.py
python 03/ex5/: ft_data_stream.py
python 03/ex6/: ft_data_alchemist.py
python 04/: .gitignore
python 04/ex0/: ft_ancient_text.py
python 04/ex1/: ft_archive_creation.py
python 04/ex2/: ft_stream_management.py
python 04/ex3/: ft_vault_security.py
python 06/: master  master.txt
python 07/: battle.py  capacitor.py  tournament.py
python 08/ex1/: a.txt  exemple.py  loading.py  pyproject.toml
(+39 files in other folders)
